--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
     <artifactId>commons-io</artifactId>
     <version>2.6</version>
 </dependency>
+<dependency>
+  <groupId>org.testng</groupId>
+  <artifactId>testng</artifactId>
+  <version>6.8</version>
+  <scope>compile</scope>
+</dependency>
 
 
   </dependencies>
